Use Cassandra Java module options in worker JVM